# Amendia

./: .gitignore  README.md
backend/services/agent-runtime/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/agent-runtime/app/: config.py  deps.py  logging_conf.py  main.py
backend/services/agent-runtime/app/capabilities/: __init__.py  composition.py  payment_comp.py  screening.py
backend/services/agent-runtime/app/clients/: __init__.py  registry_client.py
backend/services/agent-runtime/app/dal/: artifact_schema_repo.py  base.py  capability_repo.py  dispatch_repo.py  hitl_task_repo.py  instance_repo.py  message_repo.py  pack_repo.py  sample_repo.py  timer_repo.py
backend/services/agent-runtime/app/db/: mongo.py
backend/services/agent-runtime/app/engine/: __init__.py  bundle.py  call_activity.py  compensation.py  compiler.py  engine.py  expr.py  hitl.py  multi_instance.py  state.py  task_runner.py
backend/services/agent-runtime/app/events/: consumer.py  publisher.py  rabbit.py
backend/services/agent-runtime/app/middleware/: request_id.py
backend/services/agent-runtime/app/models/: artifact_schema.py  capability.py  common.py  dispatch.py  hitl_task.py  message.py  process_instance.py  process_pack.py  timer.py
backend/services/agent-runtime/app/routers/: admin.py  artifact_schemas.py  capabilities.py  health.py  hitl_tasks.py  instances.py  messages.py  packs.py
backend/services/agent-runtime/app/seeding/: load.py
backend/services/agent-runtime/app/services/: __init__.py  dispatch_service.py  hitl_service.py  message_service.py  timer_service.py
backend/services/agent-runtime/seed/compose-caller/: compose-caller.bpmn  manifest.json
backend/services/agent-runtime/seed/compose-cyc-a/: compose-cyc-a.bpmn  manifest.json
backend/services/agent-runtime/seed/compose-cyc-b/: compose-cyc-b.bpmn  manifest.json
backend/services/agent-runtime/tests/: _wire.py  conftest.py  test_api.py  test_auth.py  test_call_activity.py  test_capability_worker_broker.py  test_capability_worker_integration.py  test_capstone.py  test_compensation.py  test_compiler.py  test_deep_agent.py  test_dispatch_service.py  test_dmn_decision.py  test_e2e.py  test_egress_policy.py  test_engine_run.py  test_error_boundary.py  test_event_subprocess.py  test_execution_mode.py  test_hitl_flow.py  test_input_map.py  test_memoization.py  test_messages.py  test_messages_api.py  test_models_invariants.py  test_multi_instance.py  test_nemoclaw_provider_routing.py  test_parallel_spike.py  test_real_business_error.py  test_reduce_capability.py  test_repositories.py  test_running_deadline.py  test_sandboxed_executor.py  test_scope_boundary.py  test_seed_loader.py  test_seed_roundtrip.py  test_subprocess.py  test_task_kinds.py  test_timers.py  test_versioned_ref.py
backend/services/agent-runtime/worker/: __init__.py  consumer.py  main.py
backend/services/platform/config-forge-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/platform/identity/: .env.example  Dockerfile  pyproject.toml
backend/services/platform/notification-service/: .env.example  Dockerfile  pyproject.toml
backend/services/process-registry/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/process-registry/app/: config.py  deps.py  logging_conf.py  main.py
backend/services/process-registry/scripts/: dump_openapi.py
backend/services/process-registry/tests/: conftest.py  test_api.py  test_auth.py  test_bpmn.py  test_call_validation.py  test_capability_authoring.py  test_compat.py  test_compensation_validation.py  test_decision_validation.py  test_deep_agent_validation.py  test_event_subprocess_validation.py  test_inference_persona.py  test_input_map_inference.py  test_input_map_validation.py  test_lifecycle.py  test_onboarding.py  test_onboarding_fullset.py  test_openapi_snapshot.py  test_pack_validator.py  test_predicates.py  test_reduce_validation.py  test_resolve.py  test_roles.py  test_scope_boundary_validation.py  test_semver.py  test_timer_boundary_validation.py
libs/: pyproject.toml
libs/amendia_auth/: pyproject.toml
libs/amendia_auth/amendia_auth/: __init__.py  context.py  dependencies.py  errors.py  models.py  resolver.py  settings.py  validator.py
libs/amendia_auth/tests/: conftest.py  test_dependencies.py  test_validator.py
libs/amendia_bpmn/: pyproject.toml
libs/amendia_bpmn/amendia_bpmn/: __init__.py  compilability.py  dmn.py  model.py  parser.py  reduce.py  semantics.py  timers.py
libs/amendia_bpmn/tests/: test_call_activity.py  test_capstone.py  test_classify.py  test_compensation.py  test_compilability.py  test_dmn.py  test_error_boundary.py  test_event_subprocess.py  test_messages.py  test_multi_instance.py  test_reduce.py  test_semantics.py  test_subprocess.py  test_task_kinds.py  test_timers.py
libs/amendia_common/: events.py
libs/amendia_contracts/: pyproject.toml
libs/amendia_contracts/amendia_contracts/: artifact_schema.py  capability.py  common.py  dispatch.py  hitl_task.py  process_events.py  process_pack.py  semver.py  wire_exception.py
libs/polyllm/: README.md  pyproject.toml
libs/polyllm/src/polyllm/: client.py
libs/polyllm/tests/: test_nemoclaw_provider.py  test_remote_config_loader.py
mcp_stub/servers/wire_transfer_exception/: Dockerfile  pyproject.toml
mcp_stub/servers/wire_transfer_exception/tests/: test_server.py
stub_exception_generator/: .env.example  Dockerfile  README.md  pyproject.toml
stub_exception_generator/app/: config.py  deps.py  generator.py  logging_conf.py  main.py  sample_data.py
stub_exception_generator/app/dal/: exceptions_repo.py
stub_exception_generator/app/db/: mongo.py
stub_exception_generator/app/events/: rabbit.py
stub_exception_generator/app/models/: api.py  envelope.py  events.py
stub_exception_generator/app/routers/: exceptions.py  health.py
stub_exception_generator/app/sample_data/: analyst-notes.txt
stub_exception_generator/tests/: conftest.py  test_api.py  test_auth.py  test_generator.py  test_routing_key.py
(+440 files in other folders)
