[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stub-exception-generator"
version = "0.1.0"
description = "Amendia dev/test stub that mimics a bank's exception store"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "motor>=3.5",
  "aio-pika>=9.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "orjson>=3.10",
  "dnspython>=2.6",
  "amendia-common",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.4",
]

# Local editable path dependency on the shared lib (resolved by uv).
[tool.uv.sources]
amendia-common = { path = "../libs", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app", "../libs"]
asyncio_mode = "auto"
addopts = "-q"
