[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "amendia-auth"
version = "0.1.0"
description = "Amendia shared auth: OIDC bearer validation → Principal, identity resolution → AuthenticatedUser, FastAPI dependencies"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyjwt[crypto]>=2.9",
  "httpx>=0.27",
  "fastapi>=0.115",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "cryptography>=42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["amendia_auth"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q"
