[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Amendia agent-runtime — contract models, persistence, and wire-repair seed data"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "motor>=3.5",
  "aio-pika>=9.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "orjson>=3.10",
  "dnspython>=2.6",
  "jsonschema>=4.21",
  "packaging>=24.0",
  "httpx>=0.27",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-mongodb>=0.1.0",
  "langchain-core>=0.3.0",
  "amendia-common",
  "amendia-contracts",
  "amendia-bpmn",
  "amendia-auth",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.4",
  "mongomock-motor>=0.0.29",
]
# Real LLM path (only needed when AGENTRT_SIMULATION_MODE=false).
llm = ["langchain-anthropic>=0.2.0"]

# Local editable path dependencies on the shared libs (resolved by uv).
[tool.uv.sources]
amendia-common = { path = "../../../libs", editable = true }
amendia-contracts = { path = "../../../libs/amendia_contracts", editable = true }
amendia-bpmn = { path = "../../../libs/amendia_bpmn", editable = true }
amendia-auth = { path = "../../../libs/amendia_auth", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app", "../../../libs", "../../../libs/amendia_contracts", "../../../libs/amendia_bpmn", "../../../libs/amendia_auth"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
  "integration: end-to-end test requiring the docker-compose stack (auto-skips if unreachable)",
]
