[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wire-transfer-exception-mcp"
version = "0.1.0"
description = "Deterministic (dumb) MCP server exposing the ten wire-transfer-exception capability tools for Amendia onboarding + runtime integration."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.20",
    "anyio>=4",
    "httpx>=0.27",
]

[project.scripts]
wire-transfer-exception-mcp = "wire_transfer_exception_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wire_transfer_exception_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
