[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "config-forge-service"
version = "0.1.0"
description = "ConfigForge — Platform Config Registry Service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "motor>=3.5",
  "python-dotenv>=1.0",
  "orjson>=3.10",
  "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "anyio>=4.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
