[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "notification-service"
version = "0.1.0"
description = "Amendia notification platform service — consumes domain events and fans out thin invalidation signals to browsers over SSE"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "orjson>=3.10",
  "aio-pika>=9.4",
  "amendia-common",
  "amendia-contracts",
  "amendia-auth",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.4",
]

[tool.uv.sources]
amendia-common = { path = "../../../../libs", editable = true }
amendia-contracts = { path = "../../../../libs/amendia_contracts", editable = true }
amendia-auth = { path = "../../../../libs/amendia_auth", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app", "../../../../libs", "../../../../libs/amendia_contracts", "../../../../libs/amendia_auth"]
asyncio_mode = "auto"
addopts = "-q"
